Fixed bug where navbar overlapped with scrollbar

--- a/src/components/views/app/app.scss
+++ b/src/components/views/app/app.scss
@@ -3,7 +3,6 @@
 :global(html), :global(body), :global(.appWrapper), :global(#root) {
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: 'Exo 2', sans-serif;
@@ -19,7 +18,6 @@
   background: url("./banner.jpg") no-repeat fixed center 0;
   background-size: cover;
   //background-blend-mode: luminosity;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, .12), 1px 2px 5px rgba(0, 0, 0, .4);
   border-bottom: 3px solid darken($green, 10%);
   box-shadow: $global-box-shadow;
 
@@ -28,6 +26,7 @@
     h1 {
       font-weight: 600;
       margin: 10px;
+      text-shadow: 2px 2px 1px rgba(0, 0, 0, .6), 2px 3px 5px rgba(0, 0, 0, .4);
     }
     h4 {
       font-weight: 400;
